syntax = "proto3";

package ova.recording.api;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./api";

message Appointment {
  uint64 appointment_id = 1;
  uint64 user_id = 2;
  string name = 3;
  string description = 4;
  google.protobuf.Timestamp start_time = 5;
  google.protobuf.Timestamp end_time = 6;
}

message CreateAppointmentV1Request {
  Appointment appointment = 1;
}

message DescribeAppointmentV1Request {
  uint64 appointment_id = 1;
}

message ListAppointmentsV1Request {

}

message ListAppointmentsV1Response {
  repeated Appointment appointments = 1;
}

message RemoveAppointmentV1Request {
  uint64 appointment_id = 1;
}

service RecordingService {
  rpc CreateAppointmentV1(CreateAppointmentV1Request) returns (google.protobuf.Empty) {
  }
  rpc DescribeAppointmentV1(DescribeAppointmentV1Request) returns (Appointment) {
  }
  rpc ListAppointmentsV1(ListAppointmentsV1Request) returns (ListAppointmentsV1Response) {
  }
  rpc RemoveAppointmentV1(RemoveAppointmentV1Request) returns (google.protobuf.Empty) {
  }
}
