syntax = "proto3";

package ova.recording.api;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./api";

message InAppointmentV1 {
  uint64 user_id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
}

message OutAppointmentV1 {
  uint64 appointment_id = 1;
  uint64 user_id = 2;
  string name = 3;
  string description = 4;
  google.protobuf.Timestamp start_time = 5;
  google.protobuf.Timestamp end_time = 6;
}

message CreateAppointmentRequestV1 {
  InAppointmentV1 appointment = 1;
}

message DescribeAppointmentRequestV1 {
  uint64 appointment_id = 1;
}

message ListAppointmentsRequestV1 {
  uint64 from_id = 1;
  uint64 num = 2;
}

message ListAppointmentsResponseV1 {
  repeated OutAppointmentV1 appointments = 1;
}

message RemoveAppointmentRequestV1 {
  uint64 appointment_id = 1;
}

service RecordingService {
  rpc CreateAppointmentV1(CreateAppointmentRequestV1) returns (google.protobuf.Empty) {
  }
  rpc DescribeAppointmentV1(DescribeAppointmentRequestV1) returns (OutAppointmentV1) {
  }
  rpc ListAppointmentsV1(ListAppointmentsRequestV1) returns (ListAppointmentsResponseV1) {
  }
  rpc RemoveAppointmentV1(RemoveAppointmentRequestV1) returns (google.protobuf.Empty) {
  }
}
